fix(component): update Icon to Graphic to avoid Next.js component name conflict and adjust spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -66,6 +66,11 @@ img {
     height: 77px;
 }
 
+.graphic {
+    width: 50px;
+    height: 50px;
+}
+
 @keyframes slider {
     0%  { transform: translateY(240px); }
     10% { opacity: 1; transform: translateY(240px); }
